# geddes

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-npm.yml  publish-pypi.yml  publish-rust.yml  release.yml
node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  prebuild.md
node/scripts/: sync-version.mjs
node/src/: lib.rs
src/: error.rs  lib.rs  parser.rs  python.rs
tests/: README.md  loader_tests.rs  test_python.py
tests/data/rasx/: sample.rasx
tests/data/xy/: sample.xy
