[package]
name = "geddes"
version = "0.1.0"
edition = "2021"
description = "A Rust library for parsing XRD pattern files (xy, rasx, raw)"
license = "MIT"
repository = "https://github.com/jcwang587/geddes"
readme = "README.md"
keywords = ["xrd", "parser", "science", "crystallography", "chemistry"]
categories = ["science", "parsing"]

[dependencies]
zip = "0.6"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
