[package]
name = "geddes"
version = "0.1.2"
edition = "2021"
description = "A Rust library for parsing XRD pattern files (xy, rasx, raw)"
license = "MIT"
repository = "https://github.com/jcwang587/geddes"
readme = "README.md"
keywords = ["xrd", "parser", "science", "crystallography", "chemistry"]
categories = ["science", "parsing"]

[dependencies]
zip = "7.1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
